--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -3,7 +3,7 @@
 <div id="index_review">
   <p id="notice"><%= notice %></p>
 
-  <h1>Reviews</h1>
+  <h1>レビューリスト</h1>
 
   <table>
     <thead>
@@ -37,7 +37,7 @@
 
   <br>
 
-  <%= link_to 'New Review', new_review_path %>
+  <%= link_to '新規作成', new_review_path %>
 </div>
 
 <%= render "shared/footer" %>
