--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -4,9 +4,90 @@
 
 // pc用
 @media only screen and (min-width: 640px) {
+  a {
+
+  }
+  a:hover {
+    background-color: none !important;
+  }
   // header
   #header {
     padding: 30px;
+    .header {
+      box-sizing: border-box;
+      width: 100%;
+    }
+
+    .header-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      max-width: 1024px;
+      height: 60px;
+      padding: 0 0.8em;
+      margin: 0 auto;
+      font-size: 1.2em;
+    }
+
+    .header-nav {
+      display: flex;
+      align-items: center;
+    }
+
+    .header-nav-item {
+      display: flex;
+      align-items: center;
+      margin-left: 16px;
+    }
+
+    .logo a {
+      width: 70px;
+      text-decoration: none;
+      font-size: 22px;
+    }
+
+    .header-button {
+      box-sizing: border-box;
+      display: inline-block;
+      padding: 0.5em 1.2em;
+      font-size: 12px;
+      text-decoration: none;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .header-login {
+      color: #4e4e4e;
+    }
+
+    .header-login:hover {
+      color: #afafaf;
+    }
+
+    .header-post {
+      color: #404040;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      background: #f1e767;
+      background: -webkit-gradient(linear, left top, left bottom, from(#fdfbfb), to(#ebedee));
+      background: -webkit-linear-gradient(top, #fdfbfb 0%, #ebedee 100%);
+      background: linear-gradient(to bottom, #fdfbfb 0%, #ebedee 100%);
+      -webkit-box-shadow: inset 1px 1px 1px #fff;
+      box-shadow: inset 1px 1px 1px #fff;
+    }
+
+    .header-post:hover {
+      border: 1px #d6d6d6 solid;
+      background: -webkit-gradient(linear, left bottom, left top, from(#fdfbfb), to(#ebedee));
+      background: -webkit-linear-gradient(bottom, #fdfbfb 0%, #ebedee 100%);
+      background: linear-gradient(to top, #fdfbfb 0%, #ebedee 100%);
+    }
+
+    @media screen and (max-width: 480px) {
+      .header-post {
+        display: none;
+      }
+    }
   }
 
   //footer
@@ -142,6 +223,12 @@
   // index
   #index_review {
     margin: 100px;
+    a {
+      padding-left: 90px;
+    }
+    h1 {
+      padding-left: 100px;
+    }
     thead, tbody, tfoot, tr, td, th {
       padding: 20px;
     }
@@ -157,6 +244,7 @@
       th {
         max-width: 120px;
         min-width: 90px;
+        text-align: left;
       }
       td {
         max-width: 120px;
@@ -472,11 +560,16 @@
 
   //new
   #new_review {
-    margin: 100px;
+    margin: 100px auto;
+    width: 60%;
     .field {
       position: relative;
-      width: 27.33%;
       margin-top: 60px;
+      textarea {
+        width: 100%;
+        height: 300px;
+        margin-bottom: 40px;
+      }
       i {
         position: absolute;
         top: 0;
@@ -488,7 +581,7 @@
     }
     .uline {
       position: relative;
-      width: 27.33%;
+      width: 40%;
       input[type='text'], textarea {
         font: 15px/24px sans-serif;
         box-sizing: border-box;
