--- a/app/assets/stylesheets/sample_book1.scss
+++ b/app/assets/stylesheets/sample_book1.scss
@@ -648,8 +648,6 @@
         border-bottom: 20px solid #c0392b;
       }
     }
-
-
   }
 
   .ribbon::before,
@@ -684,6 +682,7 @@
   }
 
   figcaption h1 {
+    line-height: 40px;
     margin: 0;
   }
 
