--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,35 +1,20 @@
 <div id="header">
-  <header>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-mdb-toggle="collapse"
-          data-mdb-target="#navbarExample01"
-          aria-controls="navbarExample01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-          >
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarExample01">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="reviews">Reviews</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="reviews/new">New</a>
-            </li>
-          </ul>
-        </div>
+  <header class="header">
+    <div class="header-inner">
+      <div class="logo">
+        <a href="/">
+          本棚
+        </a>
       </div>
-    </nav>
-    <!-- Navbar -->
+      <nav class="header-nav">
+        <div class="header-nav-item">
+          <%= link_to "新規作成", new_review_path, class:"header-button header-post" %>
+        </div>
+        <div class="header-nav-item">
+          <%= link_to "レビューリスト", reviews_path, class:"header-button header-login" %>
+        </div>
+      </nav>
+    </div>
   </header>
 </div>
 
