--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -28,7 +28,7 @@
 
       <p>
       <strong>カテゴリ:</strong>
-      <%= @review.category_id %>
+      <%= @review.category.name %>
       </p>
 
       <p>
