--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -22,7 +22,8 @@
     <%= form.date_select :published, start_year: 1900, placeholder:"発行年月" %>
   </div>
   <div class="field">
-    <%= form.number_field :category_id, placeholder:"カテゴリ" %>
+    <%= form.label :category_id, "カテゴリ" %>
+    <%= form.collection_select :category_id, Category.all, :id, :name %>
   </div>
   <div class="field">
     <%= form.number_field :score, placeholder:"点数" %>
