--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -5,7 +5,7 @@
   <div class="boxContainer">
     <div class="box">
       <p>
-      <%= image_tag @review.portrait.variant(resize_to_limit: [100, 100]) %>
+        <%= image_tag @review.portrait %>
       </p>
     </div>
 
