--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -5,7 +5,7 @@
 // pc用
 @media only screen and (min-width: 640px) {
   a {
-
+    color: #7b6d9c;
   }
   a:hover {
     background-color: none !important;
@@ -57,15 +57,16 @@
     }
 
     .header-login {
-      color: #4e4e4e;
+      color: #7b6d9c;
     }
 
     .header-login:hover {
-      color: #afafaf;
+      color: #8f7fb3;
+      border-bottom:solid 1px #8f7fb3
     }
 
     .header-post {
-      color: #404040;
+      color: #7b6d9c;
       border: 1px solid #ccc;
       border-radius: 4px;
       background: #f1e767;
@@ -267,6 +268,7 @@
       padding: 30px;
       img {
         min-width: 120px;
+        max-width: 180px;
       }
     }
     .boxContainer{
@@ -570,9 +572,12 @@
       position: relative;
       margin-top: 60px;
       textarea {
-        width: 100%;
-        height: 300px;
-        margin-bottom: 40px;
+        margin: 0px 0px 40px;
+        height: 431px;
+        width: 1040px;
+        border: solid 1px #7b6d9c;
+        padding: 30px 40px;
+        line-height: 32px;
       }
       i {
         position: absolute;
@@ -585,7 +590,7 @@
     }
     .uline {
       position: relative;
-      width: 40%;
+      width: 50%;
       input[type='text'], textarea {
         font: 15px/24px sans-serif;
         box-sizing: border-box;
@@ -617,7 +622,7 @@
         content: '';
         border-width: 0 1px 1px 1px;
         border-style: solid;
-        border-color: #da3c41;
+        border-color: #7b6d9c;
       }
     }
   }
