--- a/app/assets/stylesheets/sample_book1.scss
+++ b/app/assets/stylesheets/sample_book1.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Potta+One&display=swap');
 #sample_book {
   *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
@@ -25,16 +26,16 @@
   a {
     color: #2c3e50;
     text-decoration: none;
+    font-family: 'Potta One', cursive;
   }
 
   .btn {
     display: inline-block;
     text-transform: uppercase;
-    border: 2px solid #2c3e50;
-    margin-top: 100px; 
-    font-size: 14px;
+    margin-top: 90px; 
+    font-size: 18px;
     font-weight: 700;
-    padding: 0.1em 0.4em;
+    padding: 8px 12px;
     text-align: center;
     -webkit-transition: color 0.3s, border-color 0.3s;
     -moz-transition: color 0.3s, border-color 0.3s;
@@ -43,7 +44,7 @@
 
   .btn:hover {
     border-color: #16a085;
-    color: #16a085;
+    color: #7b6d9c;
   }
 
   /* basic grid, only for this demo */
@@ -687,7 +688,7 @@
   }
 
   figcaption span {
-    color: #16a085;
+    color: #7b6d9c;
     padding: 0.6em 0 1em 0;
     display: block;
   }
