--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="header-inner">
       <div class="logo">
         <a href="/">
-          <img src="/assets/ロゴ4.png" style="width: 100px;">
+          <img src="assets/ロゴ4.png" style="width: 100px;">
         </a>
       </div>
       <nav class="header-nav">
