--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -32,6 +32,28 @@
           <td><%= link_to '削除', review, method: :delete, data: { confirm: '削除してもよろしいですか？' } %></td>
         </tr>
       <% end %>
+      <tr>
+        <td><%= image_tag "/assets/人工衛星をつくる.png", width: '80px', height: '120px' %></td>
+        <td>人工衛星をつくる</td>
+        <td>2011年11月</td>
+        <td>宮崎 康行</td>
+        <td>90</td>
+        <td>科学</td>
+        <td><%= link_to '詳細', "show_sample2" %></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><%= image_tag "/assets/人間の建設.png", width: '80px', height: '120px' %></td>
+        <td>人間の建設</td>
+        <td>1985年</td>
+        <td>岡潔・小林秀雄</td>
+        <td>85</td>
+        <td>教養</td>
+        <td><%= link_to '詳細', "show_sample1" %></td>
+        <td></td>
+        <td></td>
+      </tr>
     </tbody>
   </table>
 
