--- a/app/views/reviews/top.html.erb
+++ b/app/views/reviews/top.html.erb
@@ -16,44 +16,6 @@
               <!-- Front -->               
               <ul class='hardcover_front'>  
                 <li>                        
-                  <img src="/assets/人間の建設.png" class="portrait_img">
-                  <span class="ribbon bestseller">教養</span>  
-                </li>                                                                 
-                <li></li>  
-              </ul>        
-              <!-- Pages -->        
-              <ul class='page'>       
-                <li></li>        
-                <li>
-                  <a class="btn" href="">サンプル</a>
-                </li>                                               
-                <li></li>  
-                <li></li>  
-                <li></li>  
-              </ul>        
-              <!-- Back -->        
-              <ul class='hardcover_back'>  
-                <li></li>                  
-                <li></li>  
-              </ul>        
-              <ul class='book_spine'>  
-                <li></li>              
-                <li></li>  
-              </ul>        
-              <figcaption>  
-                <h1>人間の建設</h1>  
-                <span>岡潔・小林秀雄</span>  
-                <p>1980年10月 発行</p>  
-              </figcaption>                                               
-            </figure>        
-          </li>
-        </div>
-        <div class="wrap-sample-book">
-          <li>                  
-            <figure class='book'>        
-              <!-- Front -->               
-              <ul class='hardcover_front'>  
-                <li>                        
                   <img src="/assets/人工衛星をつくる.png" class="portrait_img">
                   <span class="ribbon bestseller">科学</span>  
                 </li>                                                                 
@@ -63,7 +25,7 @@
               <ul class='page'>       
                 <li></li>        
                 <li>
-                  <a class="btn" href="">サンプル</a>
+                  <a class="btn" href="show_sample2">サンプル</a>
                 </li>                                               
                 <li></li>  
                 <li></li>  
@@ -81,6 +43,44 @@
               <figcaption>  
                 <h1>人工衛星をつくる</h1>
                 <span>宮崎 康行</span>  
+                <p>2011年11月 発行</p>  
+              </figcaption>                                               
+            </figure>        
+          </li>
+        </div>
+        <div class="wrap-sample-book">
+          <li>                  
+            <figure class='book'>        
+              <!-- Front -->               
+              <ul class='hardcover_front'>  
+                <li>                        
+                  <img src="/assets/人間の建設.png" class="portrait_img">
+                  <span class="ribbon bestseller">教養</span>  
+                </li>                                                                 
+                <li></li>  
+              </ul>        
+              <!-- Pages -->        
+              <ul class='page'>       
+                <li></li>        
+                <li>
+                  <a class="btn" href="show_sample1">サンプル</a>
+                </li>                                               
+                <li></li>  
+                <li></li>  
+                <li></li>  
+              </ul>        
+              <!-- Back -->        
+              <ul class='hardcover_back'>  
+                <li></li>                  
+                <li></li>  
+              </ul>        
+              <ul class='book_spine'>  
+                <li></li>              
+                <li></li>  
+              </ul>        
+              <figcaption>  
+                <h1>人間の建設</h1>  
+                <span>岡潔・小林秀雄</span>  
                 <p>1980年10月 発行</p>  
               </figcaption>                                               
             </figure>        
