change logo png to h2

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -45,6 +45,12 @@
       text-decoration: none;
       font-size: 22px;
     }
+    .logo-text {
+      font-size: 28px;
+      color: #71667d;
+      border: solid 4px #71667d;
+      padding: 26px 10px;
+    }
 
     .header-button {
       box-sizing: border-box;
