--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="header-inner">
       <div class="logo">
         <a href="/">
-          <%= image_tag "/assets/ロゴ4.png", style:"width: 100px;" %>
+          <h1 class="logo-text">本棚</h2>
         </a>
       </div>
       <nav class="header-nav">
