--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: review) do |form| %>
   <% if review.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
+      <h2><%= t("errors.template.header", model: Review.model_name.human, count: review.errors.count) %></h2>
 
       <ul>
         <% review.errors.each do |error| %>
