change hover design

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,7 +14,7 @@
         </div>
         <div class="header-nav-item">
           <%= link_to reviews_path, class:"header-button header-login" do %>
-            <i class="fas fa-list"></i> レビューリスト
+            <i class="fas fa-list"></i> 書評一覧
           <% end %>
         </div>
       </nav>
