--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -47,8 +47,8 @@
     }
     .logo-text {
       font-size: 28px;
-      color: #71667d;
-      border: solid 4px #71667d;
+      color: #8b77a0;
+      border: solid 4px #8b77a0;
       padding: 26px 10px;
     }
 
@@ -64,14 +64,21 @@
 
     .header-login {
       color: #7b6d9c;
+      font-weight: bold;
+      display: inline-block;
+      transition: .3s;
+      -webkit-transform: scale(1);
+      transform: scale(1);
     }
 
     .header-login:hover {
       color: #8f7fb3;
-      border-bottom:solid 1px #8f7fb3
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1);
     }
 
     .header-post {
+      font-weight: bold;
       color: #7b6d9c;
       border: 1px solid #ccc;
       border-radius: 4px;
@@ -642,9 +649,12 @@
       position: relative;
       margin-top: 60px;
       textarea {
-        width: 100%;
-        height: 300px;
-        margin-bottom: 40px;
+        margin: 0px 0px 40px;
+        height: 431px;
+        width: 1040px;
+        border: solid 1px #7b6d9c;
+        padding: 30px 40px;
+        line-height: 32px;
       }
       i {
         position: absolute;
@@ -657,7 +667,7 @@
     }
     .uline {
       position: relative;
-      width: 40%;
+      width: 50%;
       input[type='text'], textarea {
         font: 15px/24px sans-serif;
         box-sizing: border-box;
@@ -689,7 +699,7 @@
         content: '';
         border-width: 0 1px 1px 1px;
         border-style: solid;
-        border-color: #da3c41;
+        border-color: #7b6d9c;
       }
     }
   }
