--- a/app/assets/stylesheets/sample_book1.scss
+++ b/app/assets/stylesheets/sample_book1.scss
@@ -44,7 +44,7 @@
 
   .btn:hover {
     border-color: #16a085;
-    color: #7b6d9c;
+    color: #5472cd;
   }
 
   /* basic grid, only for this demo */
@@ -688,7 +688,7 @@
   }
 
   figcaption span {
-    color: #7b6d9c;
+    color: #5472cd;
     padding: 0.6em 0 1em 0;
     display: block;
   }
