--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/header' %>
 <div id="new_review">
-  <h1>レビュー作成</h1>
+  <h1>書評作成</h1>
 
   <%= render 'form', review: @review %>
 
