--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -51,6 +51,9 @@
       border: solid 4px #000;
       padding: 26px 10px;
     }
+    .logo-text:hover {
+      background-color: #ececec;
+    }
 
     .header-button {
       box-sizing: border-box;
@@ -63,7 +66,7 @@
     }
 
     .header-login {
-      color: #000;
+      color: #333;
       font-weight: bold;
       display: inline-block;
       transition: .3s;
@@ -78,7 +81,7 @@
 
     .header-post {
       font-weight: bold;
-      color: #000;
+      color: #333;
       border: 1px solid #ccc;
       border-radius: 4px;
       background: #f1e767;
@@ -587,7 +590,7 @@
         margin: 0px 0px 40px;
         height: 431px;
         width: 1040px;
-        border: solid 1px #7b6d9c;
+        border: solid 1px #333;
         padding: 30px 40px;
         line-height: 32px;
       }
@@ -634,7 +637,7 @@
         content: '';
         border-width: 0 1px 1px 1px;
         border-style: solid;
-        border-color: #7b6d9c;
+        border-color: #333;
       }
     }
   }
@@ -651,7 +654,7 @@
         margin: 0px 0px 40px;
         height: 431px;
         width: 1040px;
-        border: solid 1px #7b6d9c;
+        border: solid 1px #333;
         padding: 30px 40px;
         line-height: 32px;
       }
@@ -698,7 +701,7 @@
         content: '';
         border-width: 0 1px 1px 1px;
         border-style: solid;
-        border-color: #7b6d9c;
+        border-color: #333;
       }
     }
   }
