--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -22,8 +22,9 @@
     <%= form.date_select :published, start_year: 1900, placeholder:"発行年月" %>
   </div>
   <div class="field">
-    <%= form.label :category_id, "カテゴリ" %>
-    <%= form.collection_select :category_id, Category.all, :id, :name %>
+    <%= form.label :category_id, "カテゴリ", class:"label-above" %>
+    <div class="radio-inline">
+    <%= form.collection_radio_buttons :category_id, Category.all, :id, :name %>
   </div>
   <div class="field">
     <%= form.number_field :score, placeholder:"点数（100点満点中）" %>
@@ -39,6 +40,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit value:"送信する" %>
+    <%= form.submit value:"作成する" %>
   </div>
 <% end %>
