vue.js deployment

--- a/app/views/reviews/top.html.erb
+++ b/app/views/reviews/top.html.erb
@@ -2,6 +2,9 @@
 
 <div id="main">
 
+  <div id='hello_vue'>
+    {{message}}
+  </div>
   <div class="wrap bg-books">
     <ul class="books-block">
       <div id="sample_book">
