deploy active admin

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -11,7 +11,7 @@
     background-color: none !important;
   }
   // header
-  #header {
+  #myheader {
     padding: 30px;
     .header {
       box-sizing: border-box;
